2007-10-08  Pedro Alves  <pedro_alves@portugalmail.pt>

	Revert:
	2007-08-10  Michael Snyder  <msnyder@access-company.com>

	* stabsread.c (read_huge_number): Attempt to compute value before
	values that it depends on.

2007-10-05  Daniel Jacobowitz  <dan@codesourcery.com>

	* remote.c (get_offsets): Only call free_symfile_segment_data if
	data was allocated.

2007-10-03  Daniel Jacobowitz  <dan@codesourcery.com>

	* NEWS: Mention XML support for M68K in GDB 6.7.

2007-10-02  Ulrich Weigand  <uweigand@de.ibm.com>

	* s390-tdep.c (s390_regset_from_core_section): Allow excess section
	size to enable bi-arch generate-core-file support.

2007-10-02  Markus Deuling  <deuling@de.ibm.com>

	* spu-tdep.c (info_spu_signal_command): Fix output for SPU signal.

2007-09-29  Daniel Jacobowitz  <dan@codesourcery.com>

	* configure.ac: Add $LIBINTL when testing libbfd.
	* configure: Regenerated.

2007-09-24  Jim Blandy  <jimb@codesourcery.com>

	* symfile.h (struct symfile_segment_data): Doc fixes.
	* symfile.c (symfile_map_offsets_to_segments): Doc fixes.
	Assert that we were passed some loaded segment addresses,
	and that sections' segment numbers are valid.
	Simplify offset calculation.
	* remote.c (get_offsets): Clarify selection of relocate-by-segment
	strategy, and set num_segments correctly.  Delete redundant
	assignments to do_sections.
 
2007-09-19  Joel Brobecker  <brobecker@adacore.com>

	* version.in: Set version to 6.6.90.20070919-cvs.

2007-09-19  Joel Brobecker  <brobecker@adacore.com>

	GDB 6.6.90 released.

2007-09-19  Joel Brobecker  <brobecker@adacore.com>

	* version.in: Set version to 6.6.90.

2007-09-19  Joel Brobecker  <brobecker@adacore.com>

	* NEWS: Re-phrase "Changes since..." into "Changes in..." in
	preparation for the gdb-6.7 release and its associated pre-releases.

2007-09-19  Joel Brobecker  <brobecker@adacore.com>

	* README: Update GDB version number to 6.6.90.

2007-09-19  Daniel Jacobowitz  <dan@codesourcery.com>
