@@ -1,3 +1,7 @@
+2007-10-09  Daniel Jacobowitz  <dan@codesourcery.com>
+
+	* gdb.server/server-run.exp: Test for dynamic linker symbols.
+
 2007-09-21  Daniel Jacobowitz  <dan@codesourcery.com>
 
 	* gdb.base/sepdebug.exp (test_different_dir): Append to pf_prefix.
